syntax = "proto3";
package dymensionxyz.dymension.rollapp;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "dymension/rollapp/params.proto";
import "dymension/rollapp/rollapp.proto";
// this line is used by starport scaffolding # 1
import "dymension/rollapp/state_info.proto";

option go_package = "github.com/dymensionxyz/dymension/x/rollapp/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/dymensionxyz/dymension/rollapp/params";
  }
  // Queries a Rollapp by index.
	rpc Rollapp(QueryGetRollappRequest) returns (QueryGetRollappResponse) {
		option (google.api.http).get = "/dymensionxyz/dymension/rollapp/rollapp/{rollappId}";
	}

	// Queries a list of Rollapp items.
	rpc RollappAll(QueryAllRollappRequest) returns (QueryAllRollappResponse) {
		option (google.api.http).get = "/dymensionxyz/dymension/rollapp/rollapp";
	}

	// Queries a StateInfo by index.
	rpc StateInfo(QueryGetStateInfoRequest) returns (QueryGetStateInfoResponse) {
		option (google.api.http).get = "/dymensionxyz/dymension/rollapp/state_info/{rollappId}/{index}";
	}

	// Queries a list of StateInfo items.
	rpc StateInfoAll(QueryAllStateInfoRequest) returns (QueryAllStateInfoResponse) {
		option (google.api.http).get = "/dymensionxyz/dymension/rollapp/state_info";
	}

	// Queries a LatestStateInfoIndex by index.
	rpc LatestStateInfoIndex(QueryGetLatestStateInfoIndexRequest) returns (QueryGetLatestStateInfoIndexResponse) {
		option (google.api.http).get = "/dymensionxyz/dymension/rollapp/latest_state_info_index/{rollappId}";
	}

	// Queries a list of LatestStateInfoIndex items.
	rpc LatestStateInfoIndexAll(QueryAllLatestStateInfoIndexRequest) returns (QueryAllLatestStateInfoIndexResponse) {
		option (google.api.http).get = "/dymensionxyz/dymension/rollapp/latest_state_info_index";
	}

	// Queries a BlockHeightToFinalizationQueue by index.
	rpc BlockHeightToFinalizationQueue(QueryGetBlockHeightToFinalizationQueueRequest) returns (QueryGetBlockHeightToFinalizationQueueResponse) {
		option (google.api.http).get = "/dymensionxyz/dymension/rollapp/block_height_to_finalization_queue/{finalizationHeight}";
	}

	// Queries a list of BlockHeightToFinalizationQueue items.
	rpc BlockHeightToFinalizationQueueAll(QueryAllBlockHeightToFinalizationQueueRequest) returns (QueryAllBlockHeightToFinalizationQueueResponse) {
		option (google.api.http).get = "/dymensionxyz/dymension/rollapp/block_height_to_finalization_queue";
	}

	// Queries a list of LatestFinalizedStateInfo items.
	rpc LatestFinalizedStateInfo(QueryGetLatestFinalizedStateInfoRequest) returns (QueryGetLatestFinalizedStateInfoResponse) {
		option (google.api.http).get = "/dymensionxyz/dymension/rollapp/latest_finalized_state_info/{rollappId}";
	}

// Queries a list of GetStateInfoByHeight items.
	rpc GetStateInfoByHeight(QueryGetStateInfoByHeightRequest) returns (QueryGetStateInfoByHeightResponse) {
		option (google.api.http).get = "/dymensionxyz/dymension/rollapp/get_state_info_by_height/{rollappId}/{height}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetRollappRequest {
	  string rollappId = 1;

}

message QueryGetRollappResponse {
	Rollapp rollapp = 1 [(gogoproto.nullable) = false];
}

message QueryAllRollappRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllRollappResponse {
	repeated Rollapp rollapp = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetStateInfoRequest {
	  string rollappId = 1;
	  uint64 index = 2;
}

message QueryGetStateInfoResponse {
	StateInfo stateInfo = 1 [(gogoproto.nullable) = false];
}

message QueryAllStateInfoRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllStateInfoResponse {
	repeated StateInfo stateInfo = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetLatestStateInfoIndexRequest {
	  string rollappId = 1;

}

message QueryGetLatestStateInfoIndexResponse {
	StateInfoIndex latestStateInfoIndex = 1 [(gogoproto.nullable) = false];
}

message QueryAllLatestStateInfoIndexRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllLatestStateInfoIndexResponse {
	repeated StateInfoIndex latestStateInfoIndex = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetBlockHeightToFinalizationQueueRequest {
	  uint64 finalizationHeight = 1;
}

message QueryGetBlockHeightToFinalizationQueueResponse {
	BlockHeightToFinalizationQueue blockHeightToFinalizationQueue = 1 [(gogoproto.nullable) = false];
}

message QueryAllBlockHeightToFinalizationQueueRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllBlockHeightToFinalizationQueueResponse {
	repeated BlockHeightToFinalizationQueue blockHeightToFinalizationQueue = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetLatestFinalizedStateInfoRequest {
	string rollappId = 1;
}

message QueryGetLatestFinalizedStateInfoResponse {
	StateInfo stateInfo = 1 [(gogoproto.nullable) = false];
}

message QueryGetStateInfoByHeightRequest {
  string rollappId = 1;
  uint64 height = 2;
}

message QueryGetStateInfoByHeightResponse {
  StateInfo stateInfo = 1 [(gogoproto.nullable) = false];
}

// this line is used by starport scaffolding # 3
